crud de product

--- a/Front/src/app/Components/nav/nav.component.html
+++ b/Front/src/app/Components/nav/nav.component.html
@@ -23,7 +23,7 @@
             <a class="nav-link" aria-current="page" routerLink="/fornecedores/lista">Fornecedores</a>
           </li>
           <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" aria-current="page" routerLink="/transportes/lista">Transportes</a>
+            <a class="nav-link" aria-current="page" routerLink="/produtos/lista">Produtos</a>
           </li>
           <li class="nav-item" routerLinkActive="active">
             <a class="nav-link" aria-current="page" routerLink="/relatorios">Relatorios</a>
