--- a/Front/src/app/Pages/category/category.component.html
+++ b/Front/src/app/Pages/category/category.component.html
@@ -1,6 +1,6 @@
 <app-title
   [titulo]="'Categorias'"
-  [iconClass]="'fa fa-car'"
+  [iconClass]="'fa fa-list'"
   [botaoListar]="true"
 ></app-title>
 
