--- a/Front/src/app/Pages/product/product.component.html
+++ b/Front/src/app/Pages/product/product.component.html
@@ -1,6 +1,6 @@
 <app-title
   [titulo]="'Produtos'"
-  [iconClass]="'fa fa-bus'"
+  [iconClass]="'fa fa-shopping-cart'"
   [botaoListar]="true"
 ></app-title>
 
