--- a/Front/src/app/Components/nav/nav.component.html
+++ b/Front/src/app/Components/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm" *ngIf="showMenu()">
   <div class="container">
     <a class="navbar-brand" routerLink="dashboard">
-      <img src="assets/favicon.ico" alt="Fazenda Eletrônica" class="mb-2">
+      <img src="assets/shopping-bag.png" alt="Fazenda Eletrônica" class="mb-2">
     </a>
     <button class="navbar-toggler" (click)="isCollapsed = !isCollapsed" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,9 +25,9 @@
           <li class="nav-item" routerLinkActive="active">
             <a class="nav-link" aria-current="page" routerLink="/produtos/lista">Produtos</a>
           </li>
-          <li class="nav-item" routerLinkActive="active">
+          <!-- <li class="nav-item" routerLinkActive="active">
             <a class="nav-link" aria-current="page" routerLink="/relatorios">Relatorios</a>
-          </li>
+          </li> -->
         </ng-container>
       </ul>
 
