--- a/Front/src/app/Pages/User/Login/Login.component.html
+++ b/Front/src/app/Pages/User/Login/Login.component.html
@@ -2,6 +2,9 @@
   <div class="row justify-content-center align-items-center">
     <div class="col-md-6">
       <div class="container bg-light p-4 rounded-4 row justify-content-center mt-5">
+        <div>
+          <img src="assets/shopping-bag.png" alt="Fazenda Eletrônica" class="mb-2">
+        </div>
         <form #loginForm="ngForm" (ngSubmit)="login()" class="login-form mt-5">
           <div class="form-group">
             <label for="userName">Usuário</label>
