--- a/Front/src/app/Pages/employee/employeeList/employeeList.component.html
+++ b/Front/src/app/Pages/employee/employeeList/employeeList.component.html
@@ -32,7 +32,7 @@
         <td >{{employee.name}}</td>
         <td>{{employee.companyName}}</td>
         <td>{{employee.title}}</td>
-        <td>{{employee.birthDate | DateFormat}}</td>
+        <td>{{employee.birthDate | date:'dd/MM/yyyy'}}</td>
         <td>
           <button type="button" class="btn btn-danger btn-lg me-2" tooltip="Excluir" (click)="openModal($event, template, employee.id)">
             <i class="fa fa-trash"></i>
